--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.7",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "concurrently": "8.2.2",
@@ -41,6 +42,7 @@
     "jest-junit": "16.0.0",
     "nodemon": "3.1.0",
     "nyc": "15.1.0",
+    "supertest": "^7.0.0",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
     "tsc-watch": "6.2.0",
